fixed onderzoek info overlapping, & registreer date

--- a/ClientApp/src/components/BeheerOnderzoeken.css
+++ b/ClientApp/src/components/BeheerOnderzoeken.css
@@ -7,7 +7,7 @@
     margin-left: 1%;
 }
 .beheer-onderzoeken-container {
-    height: 650px;
+    height: 550px;
     overflow-y: scroll;
 }
 
